--- a/HotelRoomBookingApplication/Views/Home/Contact.cshtml
+++ b/HotelRoomBookingApplication/Views/Home/Contact.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Contact";
+    Layout = "_Layout";
 }
 
 
@@ -56,7 +57,7 @@
 
 
             <br /><br /><br /><br /><br /><br />
-            <strong style="color:white">
+            <strong style="color:white; border-spacing:0px 0px 0px 20px">
 
                 <address>
                    HAPPY LIVE INN <br />
