--- a/HotelRoomBookingApplication/Views/Home/Index.cshtml
+++ b/HotelRoomBookingApplication/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "_Layout";
 }
 @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
 <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
@@ -25,7 +26,7 @@
         <br />
         <br />
     </div>
-  <br/>
+    <br />
 
 
 
@@ -84,6 +85,78 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
+    <br /><br /><br />
+
+    <div>
+    <p style="text-align:center; font-size:25px; color:cadetblue; font-family:Monotype Corsiva">
+
+        The time spent with your near ones is the one to be treasured the most. <br />
+        We preserve such moments!!<br />
+        In <strong>Happy Live Inn</strong> we give you freedom for residing the way you want to.<br />
+        So, whenever you think about moments, think <strong>Happy Live Inn</strong><br />
+        whenever you think about your loved ones, think us!!
+
+
+    </p>
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    </div>
+    <div class="album py-5 bg-light">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm" style="border:5px solid; color:steelblue">
+                        <img class="card-img-top" src="~/images/seaside-hotels.jpg" style="height:250px; width:350px" alt="Card image cap">
+
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm" style="border:5px solid; color:steelblue">
+                        <img class="card-img-top" src="~/images/the-fullerton-hotel-singapore_16_orig.jpg" style="height:250px; width:350px" alt="Card image cap">
+
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm" style="border:5px solid; color:steelblue">
+                        <img class="card-img-top" src="~/images/empire-hotel-nyc-uws-central-lincoln-center-room-hero.jpg" style="height:250px; width:350px" alt="Card image cap">
+
+                    </div>
+                </div>
+
+            </div>
+            <br /><br /><br />
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm" style="border:5px solid; color:steelblue">
+                        <img class="card-img-top" src="~/images/HL_lobbychand_115x172_FitToBox_Center.jpg" style="height:250px; width:350px" alt="Card image cap">
+
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm" style="border:5px solid; color:steelblue">
+                        <img class="card-img-top" src="~/images/Nachtpool.jpg" style="height:250px; width:350px" alt="Card image cap">
+
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm" style="border:5px solid; color:steelblue">
+                        <img class="card-img-top" src="~/images/Rooms-Hotels-Kazbegi-StandardDouble-DSC_5392-1024x683.jpg" style="height:250px; width:350px" alt="Card image cap">
+
+                    </div>
+                </div>
+            </div>
+            <br /><br /><br />
+            
+        </div>
+    </div>
+
+
+
+
+
 
 
     @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
