--- a/HotelRoomBookingApplication/Views/PaymentApp/Invoice.cshtml
+++ b/HotelRoomBookingApplication/Views/PaymentApp/Invoice.cshtml
@@ -2,7 +2,8 @@
 @using HotelRoomBookingService.InvoiceInfo;
 
 @{
-    ViewData["Title"] = "PlaceOrder";
+    ViewData["Title"] = "Invoice";
+    Layout = "_LayoutLogout";
     InvoiceData InvoiceInfo = (InvoiceData)ViewData["InvoiceInfo"];
     HotelSearchDetails info = (HotelSearchDetails)ViewData["userSearchInfo"];
     List<SelectedRoomsViewModel> list = (List<SelectedRoomsViewModel>)ViewData["selectedRooms"];
@@ -32,6 +33,7 @@
             max-width: 2000px;
             height: 700px;
             padding: 40px 40px;
+            opacity: 0.8;
         }
 
         .btn {
@@ -59,7 +61,7 @@
             -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            opacity: 0.7;
+            opacity: 0.8;
         }
     </style>
     
@@ -97,8 +99,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="invoice-title">
-                            <h2 style="color:white">Invoice</h2><h3 style="color:white" class="pull-right">Invoice Number</h3><br />
-                            <h3 style="color:white" class="pull-right">@InvoiceInfo.InvoiceNo</h3>
+                            <h2 style="color:white">Invoice</h2><h3 style="color:white" class="pull-right">Invoice Number&nbsp;&nbsp;&nbsp;&nbsp;#@InvoiceInfo.InvoiceNo</h3><br />
+                           
                         </div>
                         <hr>
                         <div class="row">
@@ -189,7 +191,7 @@
 
 
 
-
+            <a asp-controller="Home" asp-action="Index" class="btn btn-primary; pull-right">Return to Home</a>
 
 
 
@@ -233,126 +235,3 @@
 
 
 
-@*<h2>PlaceOrder</h2>
-
-<style>
-
-
-    .invoice-title h2, .invoice-title h3 {
-        display: inline-block;
-    }
-
-    .table > tbody > tr > .no-line {
-        border-top: none;
-    }
-
-    .table > thead > tr > .no-line {
-        border-bottom: none;
-    }
-
-    .table > tbody > tr > .thick-line {
-        border-top: 2px solid;
-    }
-</style>
-
-
-
-
-
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="invoice-title">
-                <h2>Invoice</h2><h3 class="pull-right">Invoice Number</h3><br />
-                <h3 class="pull-right">@InvoiceInfo.InvoiceNo</h3>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-xs-6">
-                    <address>
-                        <strong>Booked By</strong><br>
-                        @InvoiceInfo.customer.CustomerName <br>
-                        @InvoiceInfo.customer.CustomerContact <br>
-
-                        @InvoiceInfo.customer.City <br>
-
-                    </address>
-                </div>
-               
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <address>
-                        <strong>Payment Method:</strong><br>
-                        @payMode<br>
-                        @InvoiceInfo.customer.Email <br />
-                    </address>
-                </div>
-                <div class="col-xs-6 text-right">
-                    <address>
-                        <strong>Order Date:</strong><br>
-                        <script>
-                            var date = new Date();
-                            document.write(date.toDateString());
-                        </script><br><br>
-                    </address>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><strong>Order summary</strong></h3>
-                </div>
-                <div class="panel-body">
-                    <div class="table-responsive">
-                        <table class="table table-condensed">
-                            <thead>
-                                <tr>
-                                    <td><strong>Room Number</strong></td>
-                                    <td class="text-center"><strong>Room Price</strong></td>
-                                    <td class="text-center"><strong>Days</strong></td>
-                                    <td class="text-right"><strong>Total</strong></td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <!-- foreach ($order->lineItems as $line) or some such thing here -->
-                                @foreach (var i in list)
-                                {
-                                    var sum = (int)@i.RoomPrice * @days;
-                                    total += sum;
-                                    <tr>
-                                        <td>@i.RoomId</td>
-                                        <td class="text-center">@i.RoomPrice</td>
-                                        <td class="text-center">@days</td>
-                                        <td class="text-right">@sum</td>
-
-                                    </tr>
-
-                                }
-
-
-                                <tr>
-                                    <td class="thick-line"></td>
-                                    <td class="thick-line"></td>
-                                    <td class="thick-line text-center"><strong>Subtotal</strong></td>
-                                    <td class="thick-line text-right">@total</td>
-                                </tr>
-
-
-
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>*@
