--- a/HotelRoomBookingApplication/Views/Shared/_LayoutLogout.cshtml
+++ b/HotelRoomBookingApplication/Views/Shared/_LayoutLogout.cshtml
@@ -44,8 +44,7 @@
                     </ul>
                         
                     <div style="float:right; padding: 15px 0px">
-                        <i class="glyphicon glyphicon-log-in"  style="color:gray"></i> <a asp-area="" asp-controller="AdminApp" asp-action="LoginView" style="font-size:medium; color: gray" ><b>Log In</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <i class="glyphicon glyphicon-user" style="color:gray"></i><a asp-area="" asp-controller="Adminapp" asp-action="NewCustomer" style="font-size:medium; color: gray"><b>Sign Up</b></a>
+                        <i class="glyphicon glyphicon-logout" style="color:gray"></i><a asp-area="" asp-controller="Home" asp-action="Index" style="font-size:medium; color: gray"><b>LogOut</b></a>
                     </div>
                     
                 </div>
