--- a/HotelRoomBookingApplication/Views/AdminApp/NewCustomer.cshtml
+++ b/HotelRoomBookingApplication/Views/AdminApp/NewCustomer.cshtml
@@ -2,6 +2,7 @@
 @model Customer
 @{
     ViewData["Title"] = "NewCustomer";
+    Layout = "_Layout";
 }
 
 <html>
@@ -22,7 +23,7 @@
         .card-container.card {
             max-width: 500px;
             padding: 40px 40px;
-            opacity:0.7;
+            opacity: 0.8;
         }
 
         .btn {
@@ -50,7 +51,7 @@
             -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            opacity: 0.7;
+            opacity: 0.8;
         }
 
         .profile-img-card {
@@ -192,7 +193,7 @@
                 <br />
                 <input type="submit" value="Add Customer" class="btn btn-lg btn-primary btn-block btn-signin" id="submitbutton"  />
             </form>
-
+        <div asp-validation-summary="All" class="text-danger" style="text-align:center; font-size:15px"></div>
         </div><!-- /card-container -->
     </div><!-- /container -->
 </body>
