--- a/HotelRoomBookingApplication/Views/PaymentApp/Payment.cshtml
+++ b/HotelRoomBookingApplication/Views/PaymentApp/Payment.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "Payment";
+    Layout = "_LayoutLogout";
     //decimal totalAmount = (decimal)ViewData["total"];
 }
 
@@ -23,7 +24,8 @@
         .card-container.card {
             max-width: 750px;
             padding: 40px 40px;
-            height:760px;
+            height: 760px;
+            opacity: 0.8;
         }
 
         .btn {
@@ -53,7 +55,7 @@
             -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-            opacity:0.7;
+            opacity: 0.8;
         }
 
         
@@ -64,11 +66,11 @@
 
     <script type="text/javascript">
         function displayForm(c) {
-            if (c.value == "CC") {
+            if (c.value == "Credit Card") {
 
                 document.getElementById("ccformContainer").style.visibility = 'visible';
                 document.getElementById("DebitcardformContainer").style.visibility = 'hidden';
-            } else if (c.value == "DC") {
+            } else if (c.value == "Debit Card") {
                 document.getElementById("ccformContainer").style.visibility = 'hidden';
 
                 document.getElementById("DebitcardformContainer").style.visibility = 'visible';
@@ -89,11 +91,11 @@
         <br/>
     
             <div style="color:white">
-                <form asp-controller="PaymentApp" asp-action="PlaceOrder" method="post">
+                <form asp-controller="PaymentApp" asp-action="Invoice" method="post">
                     
-                    <input value="CC" type="radio" name="payMode" style="transform:scale(1.5,1.5)" checked="checked" onClick="displayForm(this)" />&nbsp;&nbsp;&nbsp;Via Credit Card &nbsp;&nbsp;&nbsp;&nbsp;
+                    <input value="Credit Card" type="radio" name="payMode" style="transform:scale(1.5,1.5)" checked="checked" onClick="displayForm(this)" />&nbsp;&nbsp;&nbsp;Via Credit Card &nbsp;&nbsp;&nbsp;&nbsp;
 
-                    <input value="DC" type="radio" name="payMode" style="transform:scale(1.5,1.5)" onClick="displayForm(this)" />&nbsp;&nbsp;&nbsp;Via Debit Card
+                    <input value="Debit Card" type="radio" name="payMode" style="transform:scale(1.5,1.5)" onClick="displayForm(this)" />&nbsp;&nbsp;&nbsp;Via Debit Card
 
                     <div style=" position:relative" id="ccformContainer">
                         <br />
@@ -256,7 +258,7 @@
                                         <label style="color:white" for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label>
 
                                         Month :
-                                        <select style="color:black" name="Month" required>
+                                        <select style="color:black" name="Month" >
                                             <option value="Jan" style="color:black">Jan</option>
                                             <option value="Feb" style="color:black">Feb</option>
                                             <option value="Mar" style="color:black">Mar</option>
@@ -270,7 +272,7 @@
                                             <option value="Nov" style="color:black">Nov</option>
                                             <option value="Dec" style="color:black">Dec</option>
                                         </select> <span>
-                                            Year : <select style="color:black" name="Year" required>
+                                            Year : <select style="color:black" name="Year" >
                                                 <option value="2015" style="color:black">2015</option>
                                                 <option value="2016" style="color:black">2016</option>
                                                 <option value="2017" style="color:black">2017</option>
