--- a/HotelRoomBookingApplication/Views/SearchApp/SelectedRooms.cshtml
+++ b/HotelRoomBookingApplication/Views/SearchApp/SelectedRooms.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "SelectedRooms";
+    Layout = "_LayoutLogout";
     HotelSearchDetails info = (HotelSearchDetails)ViewData["userSearchInfo"];
     List<SelectedRoomsViewModel> list = (List<SelectedRoomsViewModel>)ViewData["selectedRooms"];
     decimal totalAmount = (decimal)ViewData["total"];
@@ -24,10 +25,11 @@
                    background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
                }
 
-               .card-container.card {
-                   max-width: 500px;
-                   padding: 40px 40px;
-               }
+        .card-container.card {
+            max-width: 500px;
+            padding: 40px 40px;
+            opacity: 0.8;
+        }
 
                .btn {
                    font-weight: 700;
@@ -54,7 +56,7 @@
                    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
                    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
                    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-                   opacity:0.7;
+                   opacity:0.8;
                }
 
               
